had a dream of my computer breaking. gonna backup this rn

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,8 @@ CC=mpicc
 CFLAGS=-O3 -Wextra
 EXEC=mpiexec
 EFLAGS=--oversubscribe
+K=3
+N=13
 
 run: all
 	${EXEC} -n 2 par.out ${EFLAGS} < a.in
@@ -10,7 +12,7 @@ run: all
 all: input seq par
 
 input:
-	python2 ../scripts/geninput.py 10 30 < a.in
+	python2 ../scripts/geninput.py ${K} ${N} < a.in
 
 seq: sequential.c
 	${CC} sequential.c ${CFLAGS} -o seq.out
